--- a/configs/vanilla/rec_chinese_lite_train_v2.0.yml
+++ b/configs/vanilla/rec_chinese_lite_train_v2.0.yml
@@ -84,7 +84,7 @@ Train:
 Eval:
   dataset:
     name: SimpleDataSet
-    data_dir: ./train_data
+    data_dir: ./train_data/
     label_file_list: ["./train_data/val_list.txt"]
     transforms:
       - DecodeImage: # load image
