--- a/configs/rec/new_baseline/nb_MotionBlur.yml
+++ b/configs/rec/new_baseline/nb_MotionBlur.yml
@@ -3,7 +3,7 @@ Global:
   epoch_num: 500
   log_smooth_window: 20
   print_batch_step: 10
-  save_model_dir: ./checkpoint/nb
+  save_model_dir: ./checkpoint/nb_MotionBlur
   save_epoch_step: 5
   # evaluation is run every 5000 iterations after the 4000th iteration
   eval_batch_step: [0, 500]
@@ -81,10 +81,16 @@ Train:
           aug_prob: 0.4
           size_thres: [20, 20]
           top_range: [1, 8]
-      - GaussBlur:
+      - GaussNoise:
           aug_prob: 0.4
-          size_thres: [20, 20]
-          kernel_size: [5, 5]
+          mean: 0
+          var: 0.1
+      - Iaa_MotionBlur:
+          aug_prob: 0.5
+          k: [3, 7]
+          angle: [0, 360]
+          direction: [-1.0, 1.0]
+          order: 1 
       - Color:
           aug_prob: 0.4
           delta_control: 0.0001
@@ -92,10 +98,6 @@ Train:
           aug_prob: 1.0
           size_thres: [10, 10]
           shift_control: 0.01
-      - GaussNoise:
-          aug_prob: 0.4
-          mean: 0
-          var: 0.1
       - PixelReverse:
           aug_prob: 0.4
       - CTCLabelEncode: # Class handling label
