--- a/configs/rec/new_baseline/nb_GaussNoise.yml
+++ b/configs/rec/new_baseline/nb_GaussNoise.yml
@@ -18,7 +18,7 @@ Global:
   character_type: ch
   max_text_length: 25
   infer_mode: False
-  use_space_char: True
+  use_space_char: False
   save_res_path: ./output/rec/predicts_chinese_lite_v2.0.txt
 
 
