--- a/configs/rec/new_baseline/nb_48_480.yml
+++ b/configs/rec/new_baseline/nb_48_480.yml
@@ -3,10 +3,11 @@ Global:
   epoch_num: 500
   log_smooth_window: 20
   print_batch_step: 10
-  save_model_dir: ./checkpoint/nb_GaussNoise
+  save_model_dir: ./checkpoint/nb_48_480
   save_epoch_step: 5
   # evaluation is run every 5000 iterations after the 4000th iteration
   eval_batch_step: [0, 500]
+  eval_epoch_step: 1
   cal_metric_during_train: True
   pretrained_model:
   checkpoints: 
@@ -14,12 +15,12 @@ Global:
   use_visualdl: False
   infer_img: doc/imgs_words/ch/word_1.jpg
   # for data or label process
-  character_dict_path: ppocr/utils/ppocr_keys_old.txt
+  character_dict_path: ppocr/utils/ppocr_keys_new.txt
   character_type: ch
   max_text_length: 25
   infer_mode: False
   use_space_char: False
-  save_res_path: ./output/rec/nb_GaussNoise.txt
+  save_res_path: ./output/rec/predicts_chinese_lite_v2.0.txt
 
 
 Optimizer:
@@ -43,6 +44,10 @@ Architecture:
     scale: 0.5
     model_name: small
     small_stride: [1, 2, 2, 2]
+    last_pool:
+      kernel_size: 3
+      stride: 3
+      padding: 0
   Neck:
     name: SequenceEncoder
     encoder_type: rnn
@@ -80,11 +85,7 @@ Train:
       - HeightCrop:
           aug_prob: 0.4
           size_thres: [20, 20]
-      - Iaa_AdditiveGaussianNoise:
-          aug_prob: 0.5
-          loc: 0
-          scale: [0, 25.5]
-          per_channel: True 
+          top_range: [1, 8]
       - GaussBlur:
           aug_prob: 0.4
           size_thres: [20, 20]
@@ -96,20 +97,20 @@ Train:
           aug_prob: 1.0
           size_thres: [10, 10]
           shift_control: 0.01
-      # - GaussNoise:
-      #     aug_prob: 0.4
-      #     mean: 0
-      #     var: 0.1
+      - GaussNoise:
+          aug_prob: 0.4
+          mean: 0
+          var: 0.1
       - PixelReverse:
           aug_prob: 0.4
       - CTCLabelEncode: # Class handling label
       - RecResizeImg:
-          image_shape: [3, 32, 320]
+          image_shape: [3, 48, 480]
       - KeepKeys:
           keep_keys: ['image', 'label', 'length'] # dataloader will return list in this order
   loader:
     shuffle: True
-    batch_size_per_card: 256
+    batch_size_per_card: 128
     drop_last: True
     num_workers: 8
 
@@ -124,11 +125,11 @@ Eval:
           channel_first: False
       - CTCLabelEncode: # Class handling label
       - RecResizeImg:
-          image_shape: [3, 32, 320]
+          image_shape: [3, 48, 480]
       - KeepKeys:
           keep_keys: ['image', 'label', 'length'] # dataloader will return list in this order
   loader:
     shuffle: False
     drop_last: False
-    batch_size_per_card: 256
+    batch_size_per_card: 128
     num_workers: 8
