--- a/configs/rec/new_baseline/nb_48_480.yml
+++ b/configs/rec/new_baseline/nb_48_480.yml
@@ -20,7 +20,7 @@ Global:
   max_text_length: 25
   infer_mode: False
   use_space_char: False
-  save_res_path: ./output/rec/predicts_chinese_lite_v2.0.txt
+  save_res_path: ./output/rec/nb_48_480.txt
 
 
 Optimizer:
