--- a/configs/rec/new_baseline/nb_LMN.yml
+++ b/configs/rec/new_baseline/nb_LMN.yml
@@ -3,11 +3,10 @@ Global:
   epoch_num: 500
   log_smooth_window: 20
   print_batch_step: 10
-  save_model_dir: ./checkpoint/nb_48_480
+  save_model_dir: ./checkpoint/nb_fullMobileNet
   save_epoch_step: 5
   # evaluation is run every 5000 iterations after the 4000th iteration
   eval_batch_step: [0, 500]
-  eval_epoch_step: 1
   cal_metric_during_train: True
   pretrained_model:
   checkpoints: 
@@ -20,7 +19,7 @@ Global:
   max_text_length: 25
   infer_mode: False
   use_space_char: False
-  save_res_path: ./output/rec/nb_48_480.txt
+  save_res_path: ./output/rec/predicts_chinese_lite_v2.0.txt
 
 
 Optimizer:
@@ -42,12 +41,8 @@ Architecture:
   Backbone:
     name: MobileNetV3
     scale: 0.5
-    model_name: small
+    model_name: large
     small_stride: [1, 2, 2, 2]
-    last_pool:
-      kernel_size: 3
-      stride: 3
-      padding: 0
   Neck:
     name: SequenceEncoder
     encoder_type: rnn
@@ -105,7 +100,7 @@ Train:
           aug_prob: 0.4
       - CTCLabelEncode: # Class handling label
       - RecResizeImg:
-          image_shape: [3, 48, 480]
+          image_shape: [3, 32, 320]
       - KeepKeys:
           keep_keys: ['image', 'label', 'length'] # dataloader will return list in this order
   loader:
@@ -125,7 +120,7 @@ Eval:
           channel_first: False
       - CTCLabelEncode: # Class handling label
       - RecResizeImg:
-          image_shape: [3, 48, 480]
+          image_shape: [3, 32, 320]
       - KeepKeys:
           keep_keys: ['image', 'label', 'length'] # dataloader will return list in this order
   loader:
