fix: use swish with v3m2

--- a/configs/rec/new_baseline/nb_48_480_MNetM2_GaussNoise_MotionBlur_ColorJitter.yml
+++ b/configs/rec/new_baseline/nb_48_480_MNetM2_GaussNoise_MotionBlur_ColorJitter.yml
@@ -48,7 +48,7 @@ Architecture:
       kernel_size: 3
       stride: 3
       padding: 0
-    # overwrite_act: swish
+    overwrite_act: swish
     # force_shortcut: True
     # act_residual: True
   Neck:
