--- a/configs/rec/new_baseline/fusion2_new_trans.yml
+++ b/configs/rec/new_baseline/fusion2_new_trans.yml
@@ -68,18 +68,6 @@ Metric:
   name: RecMetric
   main_indicator: acc
 
-FormatBundle: &FormatBundle
-  - ToFloat:
-      key: ['image']
-  - Normalize:
-      mean: [127.5, 127.5, 127.5]
-      std: [127.5, 127.5, 127.5]
-      is_rgb: False
-  - Pad:
-      use_record_target_scale: True
-  - Transpose:
-      order: [2, 0, 1]  # (h, w, c) -> (c, h, w)
-
 Train:
   dataset:
     name: SimpleDataSet
@@ -89,8 +77,12 @@ Train:
       - DecodeImage: # load image
           img_mode: BGR
           channel_first: False
+      - HeightRatioCrop:
+          aug_prob: 1.0
+          crop_ratio: !!python/tuple [0, 0.05]
       - Resize:
-          img_scale: !!python/tuple [480, 48]  # (w, h) order
+          img_scale:
+            - !!python/tuple [480, 48]  # (w, h) order
           ensures: max_width
           record_target_scale: True
       - Imau:
@@ -99,11 +91,11 @@ Train:
               p: 0.5
               then_list:
                 - typename: Cutout
-                  nb_iterations: [1, 3]
-                  size: [0.1, 0.2]
+                  nb_iterations: !!python/tuple [1, 3]
+                  size: !!python/tuple [0.05, 0.1]
                   squared: False
                   fill_mode: constant
-                  cval: [0, 255]
+                  cval: !!python/tuple [0, 255]
                   fill_per_channel: True
       - Tia:
           aug_prob: 0.4
@@ -111,21 +103,25 @@ Train:
           stretch: True
           perspective: True
           size_thres: [20, 20]
-      - HeightCrop:
-          aug_prob: 0.4
-          size_thres: [20, 20]
-          top_range: [1, 8]
-      - Iaa_AdditiveGaussianNoise:
-          aug_prob: 0.5
-          loc: 0
-          scale: [0, 25.5]
-          per_channel: True
-      - Iaa_MotionBlur:
-          aug_prob: 0.5
-          k: [3, 7]
-          angle: [0, 360]
-          direction: [-1.0, 1.0]
-          order: 1
+      - Imau:
+          transforms:
+            - typename: Sometimes
+              p: 0.5
+              then_list:
+                - typename: AdditiveGaussianNoise
+                  loc: 0
+                  scale: !!python/tuple [0, 10]
+                  per_channel: True
+      - Imau:
+          transforms:
+            - typename: Sometimes
+              p: 0.5
+              then_list:
+                - typename: MotionBlur
+                  k: !!python/tuple [3, 7]
+                  angle: !!python/tuple [0, 360]
+                  direction: !!python/tuple [-1.0, 1.0]
+                  order: 1
       - Albu:
           transforms:
             - typename: ColorJitter
@@ -134,14 +130,23 @@ Train:
               saturation: 0.2
               hue: 0.2
               p: 0.5
-      - ShiftJitter:
-          aug_prob: 1.0
-          size_thres: [10, 10]
-          shift_control: 0.01
+      # - ShiftJitter:
+      #     aug_prob: 1.0
+      #     size_thres: [10, 10]
+      #     shift_control: 0.01
       - PixelReverse:
           aug_prob: 0.4
       - CTCLabelEncode: # Class handling label
-      - *FormatBundle
+      - ToFloat:
+          key: ['image']
+      - Normalize:
+          mean: [127.5, 127.5, 127.5]
+          std: [127.5, 127.5, 127.5]
+          is_rgb: False
+      - Pad:
+          use_record_target_scale: True
+      - Transpose:
+          order: [2, 0, 1]  # (h, w, c) -> (c, h, w)
       - KeepKeys:
           keep_keys: ['image', 'label', 'length'] # dataloader will return list in this order
   loader:
@@ -164,7 +169,16 @@ Eval:
           ensures: max_width
           record_target_scale: True
       - CTCLabelEncode: # Class handling label
-      - *FormatBundle
+      - ToFloat:
+          key: ['image']
+      - Normalize:
+          mean: [127.5, 127.5, 127.5]
+          std: [127.5, 127.5, 127.5]
+          is_rgb: False
+      - Pad:
+          use_record_target_scale: True
+      - Transpose:
+          order: [2, 0, 1]  # (h, w, c) -> (c, h, w)
       - KeepKeys:
           keep_keys: ['image', 'label', 'length'] # dataloader will return list in this order
   loader:
@@ -175,13 +189,22 @@ Eval:
 
 Test:
   transforms:
-    - DecodeImage: # load image
-        img_mode: BGR
-        channel_first: False
+    # - DecodeImage: # load image
+    #     img_mode: BGR
+    #     channel_first: False
     - Resize:
         img_scale: !!python/tuple [480, 48]  # (w, h) order
-        ensures: max_width
+        ensures: ratio
         record_target_scale: True
-    - *FormatBundle
+    - ToFloat:
+        key: ['image']
+    - Normalize:
+        mean: [127.5, 127.5, 127.5]
+        std: [127.5, 127.5, 127.5]
+        is_rgb: False
+    - PatchPad:
+        divisor: 4
+    - Transpose:
+        order: [2, 0, 1]  # (h, w, c) -> (c, h, w)
     - KeepKeys:
         keep_keys: ['image']
