--- a/configs/rec/new_baseline/fusion2_LMNeScale10_new_trans_lr2x_decay4_sd.yml
+++ b/configs/rec/new_baseline/fusion2_LMNeScale10_new_trans_lr2x_decay4_sd.yml
@@ -1,9 +1,9 @@
 Global:
   use_gpu: true
-  epoch_num: 1500
+  epoch_num: 1000
   log_smooth_window: 20
   print_batch_step: 10
-  save_model_dir: ./checkpoint/fusion2_LMNeScale10_new_trans_lr0002_decay4
+  save_model_dir: ./checkpoint/fusion2_LMNeScale10_new_trans_lr2x_decay4_sd
   save_epoch_step: 5
   # evaluation is run every 5000 iterations after the 4000th iteration
   eval_batch_step: [0, 10000]
@@ -20,7 +20,7 @@ Global:
   max_text_length: 25
   infer_mode: False
   use_space_char: False
-  save_res_path: ./output/rec/fusion2_LMNeScale10_new_trans_lr0002_decay4.txt
+  save_res_path: ./output/rec/fusion2_LMNeScale10_new_trans_lr2x_decay4_sd.txt
 
 Optimizer:
   name: Adam
@@ -47,6 +47,10 @@ Architecture:
       kernel_size: 3
       stride: 3
       padding: 0
+    dropout_cfg:
+      start_epoch: 200
+      final_p: 0.1
+      start_block_idx: 12  # 12 for large:C5
   Neck:
     name: SequenceEncoder
     encoder_type: rnn
