chore: expose fpn out channel to config

--- a/configs/rec/new_baseline/fusion2_LMNetFPNScale10_new_trans_lr2x_decay4_sd.yml
+++ b/configs/rec/new_baseline/fusion2_LMNetFPNScale10_new_trans_lr2x_decay4_sd.yml
@@ -44,6 +44,7 @@ Architecture:
     model_name: large
     small_stride: [1, 2, 2, 2]
     use_fpn: True
+    fpn_out_channel: 960
     last_pool:
       kernel_size: 3
       stride: 3
