--- a/configs/rec/new_baseline/fusion2_LMNeScale10_stride2x_new_trans_lr2x_decay4_sd.yml
+++ b/configs/rec/new_baseline/fusion2_LMNeScale10_stride2x_new_trans_lr2x_decay4_sd.yml
@@ -3,7 +3,7 @@ Global:
   epoch_num: 1000
   log_smooth_window: 20
   print_batch_step: 10
-  save_model_dir: ./checkpoint/fusion2_LMNeScale10_new_trans_lr2x_decay4_sd
+  save_model_dir: ./checkpoint/fusion2_LMNeScale10_stride2x_new_trans_lr2x_decay4_sd
   save_epoch_step: 5
   # evaluation is run every 5000 iterations after the 4000th iteration
   eval_batch_step: [0, 10000]
@@ -20,7 +20,7 @@ Global:
   max_text_length: 25
   infer_mode: False
   use_space_char: False
-  save_res_path: ./output/rec/fusion2_LMNeScale10_new_trans_lr2x_decay4_sd.txt
+  save_res_path: ./output/rec/fusion2_LMNeScale10_stride2x_new_trans_lr2x_decay4_sd.txt
 
 Optimizer:
   name: Adam
@@ -42,6 +42,7 @@ Architecture:
     name: MobileNetV3
     scale: 1.0
     model_name: large
+    large_stride: [[1,1], [2,2], [2,1], [2,1]]
     last_pool:
       kernel_size: 3
       stride: 3
