--- a/configs/rec/new_baseline/fusion2_LMNetFPNScale10_new_trans_lr2x_decay4_sd.yml
+++ b/configs/rec/new_baseline/fusion2_LMNetFPNScale10_new_trans_lr2x_decay4_sd.yml
@@ -42,7 +42,7 @@ Architecture:
     name: MobileNetV3M
     scale: 1.0
     model_name: large
-    small_stride: [1, 2, 2, 2]
+    large_stride: [[1, 1], [2, 1], [2, 1], [2, 1]]
     use_fpn: True
     fpn_out_channel: 960
     last_pool:
