--- a/configs/rec/new_baseline/fusion2_fulldataset_LMNetS60H64_stride2x_new_trans_lr1x_decay4_sd_msi.yml
+++ b/configs/rec/new_baseline/fusion2_fulldataset_LMNetS60H64_stride2x_new_trans_lr1x_decay4_sd_msi.yml
@@ -3,8 +3,8 @@ Global:
   epoch_num: 1500
   log_smooth_window: 20
   print_batch_step: 10
-  save_model_dir: ./checkpoint/fusion2_fulldataset_LMNetS60H64_stride2x_new_trans_lr1x_decay4_sd
-  save_epoch_step: 5
+  save_model_dir: ./checkpoint/fusion2_fulldataset_LMNetS60H64_stride2x_new_trans_lr1x_decay4_sd_msi
+  save_epoch_step: 1
   # evaluation is run every 5000 iterations after the 4000th iteration
   eval_batch_step: [0, 1000000]
   eval_epoch_step: 1
@@ -20,7 +20,7 @@ Global:
   max_text_length: 25
   infer_mode: False
   use_space_char: False
-  save_res_path: ./output/rec/fusion2_fulldataset_LMNetS60H64_stride2x_new_trans_lr1x_decay4_sd.txt
+  save_res_path: ./output/rec/fusion2_fulldataset_LMNetS60H64_stride2x_new_trans_lr1x_decay4_sd_msi.txt
 
 Optimizer:
   name: Adam
@@ -28,7 +28,7 @@ Optimizer:
   beta2: 0.999
   lr:
     name: CyclicalCosine
-    learning_rate: 0.004
+    learning_rate: 0.003
     cycle: 50
   regularizer:
     name: 'L2'
@@ -92,7 +92,7 @@ Train:
           record_target_scale: True
           ms_mode: iter
           # NOTE: ms_iter_interval must be multiple of batch_size
-          ms_iter_interval: 64  # actual interval: ms_iter_interval / batch_size * num_workers
+          ms_iter_interval: 96  # actual interval: ms_iter_interval / batch_size * num_workers
       - Imau:
           transforms:
             - typename: Sometimes
@@ -155,15 +155,15 @@ Train:
           keep_keys: ['image', 'label', 'length'] # dataloader will return list in this order
   loader:
     shuffle: True
-    batch_size_per_card: 128
+    batch_size_per_card: 96
     drop_last: True
     num_workers: 8
 
 Eval:
   dataset:
     name: SimpleDataSet
-    data_dir: ./data/testA/TestAImages
-    label_file_list: ["./data/testA/test_A.txt"]
+    data_dir: ./data/testB/TestBImages
+    label_file_list: ["./data/testB/test_B.txt"]
     transforms:
       - DecodeImage: # load image
           img_mode: BGR
@@ -188,7 +188,7 @@ Eval:
   loader:
     shuffle: False
     drop_last: False
-    batch_size_per_card: 128
+    batch_size_per_card: 96
     num_workers: 8
 
 Test:
