--- a/configs/rec/new_baseline/nb_att.yml
+++ b/configs/rec/new_baseline/nb_att.yml
@@ -3,7 +3,7 @@ Global:
   epoch_num: 500
   log_smooth_window: 20
   print_batch_step: 10
-  save_model_dir: ./output/rec/nb_att/
+  save_model_dir: ./checkpoint/nb_att/
   save_epoch_step: 5
   # evaluation is run every 5000 iterations after the 4000th iteration
   eval_batch_step: [0, 10000]
