--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 shapely
 scikit-image==0.17.2
-imgaug==0.4.0
 pyclipper
 lmdb
 tqdm
@@ -9,4 +8,5 @@ visualdl
 python-Levenshtein
 opencv-contrib-python==4.2.0.32
 opencv-python==4.2.0.32
-albumentations
+imgaug==0.4.0
+albumentations --no-binary imgaug,albumentations
